# pkm-ai

./: .gitignore  Cargo.toml  README.md
crates/kuzu-bindgen/: Cargo.toml
crates/kuzu-bindgen/src/: lib.rs
docs/: CONCEPTS.md  CONCEPTS_ES.md  SPEC.md  SPEC_ES.md  USER_MANUAL.md  USER_MANUAL_ES.md  agent-setup-ES.md  agent-setup.md  cli-reference-ES.md  cli-reference.md  getting-started-ES.md  getting-started.md  mcp-reference-ES.md  mcp-reference.md  mcp-workflow-ES.md  mcp-workflow.md  session-lifecycle-ES.md  session-lifecycle.md
scripts/: create_spec_moc.sh  create_spec_notes.sh
src/: lib.rs  main.rs
src/ai/: embeddings.rs  ghost_detector.rs  link_suggester.rs  mcp.rs  mod.rs  semantic_clustering.rs  structure_generator.rs
src/application/: mod.rs
src/application/commands/: create_block.rs  delete_block.rs  link_blocks.rs  mod.rs  update_block.rs
src/application/queries/: get_block.rs  mod.rs  search_blocks.rs  traverse_spine.rs
src/cli/: app.rs  config.rs  mod.rs
src/cli/commands/: architect.rs  create.rs  db.rs  db_cmd.rs  doctor.rs  ghost.rs  gravity_check.rs  grep.rs  link.rs  lint.rs  list.rs  mcp.rs  mod.rs  promote.rs  quick.rs  search.rs  session.rs  show.rs  sync.rs  synthesize.rs  toc.rs  traverse.rs  version.rs
src/db/: mod.rs  repository.rs  schema.rs
src/db/repository/: block_repo.rs  edge_repo.rs  traits.rs
src/models/: block.rs  edge.rs  fractional_index.rs  ghost_node.rs  mod.rs  smart_section.rs  structural_spine.rs  structure.rs
src/spine/: gravity_hooks.rs  linting.rs  mod.rs  rebalancing.rs  traversal.rs
src/synthesis/: mod.rs  template.rs  template_engine.rs  toc.rs  typst_renderer.rs
src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
src/tui/widgets/: block_list.rs  spine_view.rs  toc_view.rs
src/versioning/: agent.rs  commit.rs  delta.rs  mod.rs  repo.rs  view.rs  working_set.rs
src/versioning/repository/: mod.rs  object_store.rs  ref_store.rs  working_set_store.rs
tests/: cli_integration_tests.rs  lint_integration_tests.rs  synthesis_integration_tests.rs  versioning_integration_tests.rs
tests/doubles/: mock_block_repo.rs  mock_edge_repo.rs  mod.rs
workflows/claude_code/: CLAUDE.md
workflows/pkmai/: .gitignore  AGENTS.md  LICENSE  README.md  SKILL-MANIFEST.md  skills-review-manifest.md  skills-review-sdd.md  skills-review-utilities.md
(+45 files in other folders)
